--- a/_posts/2017-06-28-GSoC-2017:Log-2.md
+++ b/_posts/2017-06-28-GSoC-2017:Log-2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 'GSoC 2017: Log #2'
+comments: true
 ---
 
 Previously, I have set up a RTCPeerConnection between the main jitis-meet window and the micro window for the video transmission.
@@ -54,5 +55,3 @@ A Javascript object that is called in the Electron’s main process. Since Elect
 ![Receiver]({{ site.url }}/{{ site.baseurl }}/images/2017-06-28-GSoC-2017:Log-2/window2.png)
 
 Currently, it only supports transmission of MediaStream, but it could be extended to general Data transmission later on. I might be going to publish this code in npm, since I could find anything similar.
-
-
