--- a/_posts/2017-07-21-GSoC-2017:Log-3.md
+++ b/_posts/2017-07-21-GSoC-2017:Log-3.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 'GSoC 2017: Log #3'
+comments: true
 ---
 
 Previously, I managed to transfer the conference video from the main BrowserWindow to micro BrowserWindow using RTCPeerConnection API. However, one problem emerged was that it does not react to the dominantSpkearChanged event, which causes the transition of the largeVideo to another speaker in the Jitsi-meet application. This problem caused immense amount of trouble because it is so hard to solve without directly accessing the Jitsi-meet’s components.
@@ -44,5 +45,3 @@ After some desperate researching and all alternatives failed, I posted a questio
 It turned out that HTMLVideoElement.ondurationchange event can detect the change in srcObject of a video element. In this way, I don’t have to access the Jitsi-meet iframe’s App component and still be able to react to the dominantSpeakerChanged event. After discovering this, the rest of the process was very easy; whenever ondurationchange event is emitted, the main window remove the existing MediaStream object from the p2pChannel and attach the new MediaStream object.
 
 I have been struggling so long to solve this problem yet the answer was somewhat disappointingly simple. One thing I realized was that WebRTC is a fairly new technology and a lot of its parts are under development. Even the [addStream()](https://developer.mozilla.org/en-US/docs/Web/API/RTCPeerConnection/addStream) method I used to transfer the MediaStream object is deprecated, and was recommended to use [addTrack()](https://developer.mozilla.org/en-US/docs/Web/API/RTCPeerConnection/addTrack) method instead. However, addTrack() method is not supported in Chrome, so I was forced to use a deprecated method. This is not the only case of using experimental features in WebRTC, so I foresee lots of upcoming maintenance works as some of the features become unsupported in near future.
-
-
