--- a/_posts/2017-05-17-GSoC-2017:Log-0.md
+++ b/_posts/2017-05-17-GSoC-2017:Log-0.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 'GSoC 2017: Log #0'
+comments: true
 ---
 
 This summer is for code. My proposal has been accepted to the [Google Summer of Code(GSoC) 2017](https://developers.google.com/open-source/gsoc/), so I would be working under [Jitsi](https://jitsi.org/) for next few months. I never thought I would be accepted as this was my first attempt to GSoC, but hell yeah.
@@ -14,5 +15,3 @@ URL: [https://summerofcode.withgoogle.com/projects/#4757550437236736](https://su
 This is a simple feature for Jitsi-Meet’s desktop app, which pops up a small video and set of GUIs when the user minimizes the main window. It is a similar one to the one in Skype, hope I can make it cooler than that.
 
 So excited to start working on the project, and many thanks in advance to the mentors [Hristo Terezov](https://github.com/hristoterezov) and [Saúl Ibarra Corretgé](https://github.com/saghul) who will be guiding(tolerating) me for the period of time. Hope I won’t fall behind.
-
-
