--- a/_posts/2017-06-22-GSoC-2017:Log-1.md
+++ b/_posts/2017-06-22-GSoC-2017:Log-1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 'GSoC 2017: Log #1'
+comments: true
 ---
 
 First of all, I need to make sure that the large video in the Main window’s Jitsi-meet iframe also appears in the Micro window. If I can’t even access the video elements in the Jitsi-meet iframe, I can’t proceed to anywhere.
