Add tags and categories

--- a/_posts/2017-05-17-GSoC-2017:Log-0.md
+++ b/_posts/2017-05-17-GSoC-2017:Log-0.md
@@ -2,6 +2,8 @@
 layout: post
 title: 'GSoC 2017: Log #0'
 comments: true
+category: GSoC
+tags: [Jitsi, GSoC, WebRTC]
 ---
 
 This summer is for code. My proposal has been accepted to the [Google Summer of Code(GSoC) 2017](https://developers.google.com/open-source/gsoc/), so I would be working under [Jitsi](https://jitsi.org/) for next few months. I never thought I would be accepted as this was my first attempt to GSoC, but hell yeah.
