--- a/_posts/2017-06-28-GSoC-2017:Log-2.md
+++ b/_posts/2017-06-28-GSoC-2017:Log-2.md
@@ -2,6 +2,8 @@
 layout: post
 title: 'GSoC 2017: Log #2'
 comments: true
+category: GSoC
+tags: [Jitsi, GSoC, WebRTC]
 ---
 
 Previously, I have set up a RTCPeerConnection between the main jitis-meet window and the micro window for the video transmission.
