--- a/_posts/2017-07-21-GSoC-2017:Log-3.md
+++ b/_posts/2017-07-21-GSoC-2017:Log-3.md
@@ -2,6 +2,8 @@
 layout: post
 title: 'GSoC 2017: Log #3'
 comments: true
+category: GSoC
+tags: [Jitsi, GSoC, WebRTC]
 ---
 
 Previously, I managed to transfer the conference video from the main BrowserWindow to micro BrowserWindow using RTCPeerConnection API. However, one problem emerged was that it does not react to the dominantSpkearChanged event, which causes the transition of the largeVideo to another speaker in the Jitsi-meet application. This problem caused immense amount of trouble because it is so hard to solve without directly accessing the Jitsi-meet’s components.
