--- a/_posts/2017-07-26-GSoC-2017:Log-4.md
+++ b/_posts/2017-07-26-GSoC-2017:Log-4.md
@@ -2,6 +2,8 @@
 layout: post
 title: 'GSoC 2017: Log #4'
 comments: true
+category: GSoC
+tags: [Jitsi, GSoC, WebRTC]
 ---
 
 After resolving the largeVideo transition problem, the next step is to build a toolbar for micro window. I used Jitsi-meet’s [ExternalAPI](https://github.com/jitsi/jitsi-meet/blob/master/doc/api.md) as the interface between the main Jitsi-meet iframe and the Micro mode.
