--- a/_posts/2017-08-27-GSoC-2017:Warp-up.md
+++ b/_posts/2017-08-27-GSoC-2017:Warp-up.md
@@ -6,7 +6,7 @@ category: GSoC
 tags: [Jitsi, GSoC, WebRTC]
 ---
 
-![gsoc]({{ site.url }}/{{ site.baseurl }}/images/2017-08-27-GSoC-2017:Warp-up/gsoc.png)
+![gsoc]({{ site.url }}/{{ site.baseurl }}/images/2017-08-27-GSoC-2017:Warp-up/gsoc.png){: .center-image}
 
 My project in this year's Google Summer of Code was to implement [Micro Mode for Jitsi Meet Electron](https://summerofcode.withgoogle.com/projects/#4757550437236736) project, and to work on the foundation for [Jitsi Meet Spot](https://github.com/han-gyeol/jitsi-meet-spot) project which was newly launched by Jitsi recently.
 
@@ -14,8 +14,9 @@ GSoC Blog Posts:
 [https://han-gyeol.github.io/categories/#gsoc](https://han-gyeol.github.io/categories/#gsoc)
 
 Two repositories I contributed during this year's GSoC:
-[Jitsi Meet Electron](https://github.com/jitsi/jitsi-meet-electron/pull/12)
-[Jitsi Meet Spot](https://github.com/jitsi/jitsi-meet-spot/pull/1)
+* [Jitsi Meet Electron](https://github.com/jitsi/jitsi-meet-electron/pull/12)
+* [Jitsi Meet Spot](https://github.com/jitsi/jitsi-meet-spot/pull/1)
+
 
 ## Things I have learned from the project
 * WebRTC P2P Connection
