--- a/_posts/2017-08-27-GSoC-2017:Warp-up.md
+++ b/_posts/2017-08-27-GSoC-2017:Warp-up.md
@@ -13,9 +13,9 @@ My project in this year's Google Summer of Code was to implement [Micro Mode for
 GSoC Blog Posts:
 [https://han-gyeol.github.io/categories/#gsoc](https://han-gyeol.github.io/categories/#gsoc)
 
-Two repositories I contributed during this year's GSoC:
-* [Jitsi Meet Electron](https://github.com/jitsi/jitsi-meet-electron/pull/12)
-* [Jitsi Meet Spot](https://github.com/jitsi/jitsi-meet-spot/pull/1)
+Two repositories I contributed during this year's GSoC: <br>
+[Jitsi Meet Electron](https://github.com/jitsi/jitsi-meet-electron/pull/12) <br>
+[Jitsi Meet Spot](https://github.com/jitsi/jitsi-meet-spot/pull/1) <br>
 
 
 ## Things I have learned from the project
